
2022-11-16  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for computing length of ODO fields

2022-11-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: For compare of unsigned numeric DISPLAY, PACKED, or COMP-6
				field to numeric literal use 'memcmp'
				Now using config option  odo-last-varlen
				Fix emitting of trace code if line# or statement type changes
	* typeck.c: Check for compare of unsigned numeric DISPLAY, PACKED or
				COMP-6 to numeric literal
				Swap operands if comparing: literal relop field

2022-11-02  Ron Norman <rjn@inglenet.com>

	* cobc.c: If -fodoslide then also set complex_odo true
	* codegen.c: If not odoslide then group is still variable size
				if it ends with OCCURS DEPENDING ON
				If a field follows ODO and not odoslide then it is fixed size

2022-10-20  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, tree.c (cb_build_vary), tree.h: cleanup to not use
	  static variables in the parser for creation of the rw vary items

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (struct cb_if): changed "is_if" integer flag to "enum
	  cob_statement statement" providing a clear context
	* tree.c (cb_build_if), tree.h, typeck.c, codegen.c (output_stmt):
	  pass and check matching statement entry instead of magic number
	* typeck.c (cb_emit_report_moves): refactored to combine conditions
	  and separate report_footing_flag
	* codegen.c (output_stmt): refactored to combine same code for
	  PRESENT WHEN field/line
	* codegen.c: set COBOL source and statement reference correctly for
	  SEARCH ... VARYING and WHEN - as the overhead from tracing code
	  preventing this before no longer exists
	* codegen.c: improved output of source position
	* typeck.c (cb_emit_evaluate): analysis and spec for necessary changes

2022-10-18  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (clear_local_codegen_vars): unset additional
	  "current" references, preventing use-after-free
	* codegen.c (output_stmt): set current_statement on start of